objects/vlocity_cmt__ContextMapping__c.object
<CustomObject>
    <description>Defines the mapping between a context dimension and the &quot;ActiveContext&quot; which is an in-memory instance of user context.</description>
    <fields>
        <fullName>vlocity_cmt__Destination__c</fullName>
        <description>Destination ( Obj.Variable format) where the dimension data is being assigned to ( eg AppContext.Channel,AppContext.Segment ).   DESTINATION will always be AppContext</description>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dimension variable</description>
        <label>Context Dimension</label>
        <referenceTo>vlocity_cmt__ContextDimension__c</referenceTo>
        <relationshipName>Context_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <description>Scope where this mapping applies to App Context . eg Session, Order,OrderLineItem,</description>
        <label>Scope</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Source__c</fullName>
        <description>Source expression to evaluate to load the dimension value ,before loading to runtime destination ( eg Order.Channel) . FUNCTIONS will also be supported,to be used when reading source values</description>
        <label>Source Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Context Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Context Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>